[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Ahmad <almohammedahmed2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^2.2.9"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
